<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBichos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/categoria_bichos"
        android:text="@string/categoria_bichos"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvCulinaria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/categoria_culinaria"
        android:text="@string/categoria_culinaria"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvPlantas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/categoria_plantas"
        android:text="@string/categoria_plantas"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvPovosNativos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/categoria_povos_nativos"
        android:text="@string/categoria_povos_nativos"
        android:textColor="@android:color/white" />


</LinearLayout>