<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    >

    <ImageView
        android:id="@+id/item_icone"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/itemimage" />

    <LinearLayout
        android:id="@+id/item_layout_textos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/item_icone"
        android:orientation="vertical"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/item_titulo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/item_titulo"/>

        <TextView
            android:id="@+id/item_descricao"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="top"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:text="@string/item_descricao"/>

    </LinearLayout>

</LinearLayout>